bootstrap and initial styling of loginView, registrationView, movieView applied

--- a/src/Components/movie-view/movie-view.scss
+++ b/src/Components/movie-view/movie-view.scss
@@ -84,6 +84,16 @@ img {
 .item-3 {
     align-self: flex-end;
     text-align: left;
-    width: 800px;
+    width: 600px;
+    margin: 0 10px;
 }
 
+#bottom-btn {
+    display: none;
+}
+
+@media only screen and (max-width: 883px) {
+    #bottom-btn {
+        display: block;
+    }
+}
