--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,11 @@
+$background-color: linear-gradient(180deg, black, rgb(61, 61, 61));
+
+#container {
+    padding: 0;
+    margin: 0;
+    color: white;
+}
+
 .app-container {
     margin: 0;
 }
