--- a/src/Components/login-view/login-view.scss
+++ b/src/Components/login-view/login-view.scss
@@ -7,58 +7,44 @@ $form-control-border: rgb(68, 68, 68);
 $form-control-focus-border: white;
 $footer-text: rgb(136, 136, 136);
 
-.background-wrapper {
-    position: absolute;
-    background-image: url('../../images/movie_wallpaper.jpg');
-    background-attachment: fixed;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-}
+// html {
+//     background-image: url('../../images/movie_wallpaper.jpg');
+//     top: 0;
+//     margin-top: -10px;
+//     margin-bottom: 0;
+//     padding: 0;
+//     width: 100%;
+//     height: 100%;
+// }
 
-.background-overlay{
+.login-view {
+    position: absolute;
     background-color: $background-shader;
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
-}
-
-header {
-    background: rgba(0, 0, 0, 0) !important;
-    position: sticky !important;
-    top: 0;
-    z-index: 1;
-    color: $header-text;
-    margin: 0px;
-    height: 85px;
-    width: 100%;
-    border: 3px solid rgb(0,0,0,0);
-}
-
-header h1 {
-    margin: 5px 0 0 25px;
-    font-size: 55px;
-    font-family: 'Shizuru', cursive;
+    height: 960px;
 }
 
 .form-card {
     display: flex;
     justify-content: center;
-    height: auto;
     width: 100%;
-    margin-bottom: 5%;
+    height: auto;
+    margin-top: 0;
+    margin-bottom: 0 !important;
 }
 
 .form-container {
     background: $card-shader;
     color: $form-text;
-    margin: 0;
+    margin: 30px 0 0 0;
     padding: 30px 60px;
     width: 370px;
     min-height: 500px;
     max-height: 700px;
     font-size: 1.2em;
+    text-align: left;
 }
 
 .form-title{
@@ -91,12 +77,13 @@ header h1 {
 }
 
 footer {
+    color: $footer-text;
+    background: $card-shader; 
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 100px;
-    color: $footer-text;
-    background: $card-shader;   
+    
 }
 
 footer p {
