--- a/src/Components/movie-view/movie-view.scss
+++ b/src/Components/movie-view/movie-view.scss
@@ -8,18 +8,6 @@ html {
     background: $background-color;
 }
 
-.bg {
-    margin: 0;
-    background: $background-color;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    min-height: 100vh;
-}
-
-header#main-view {
-    background: $header-bg !important;
-}
-
 nav h1 {
     display: inline-flex;
 }
@@ -32,23 +20,22 @@ nav h1 {
 
 }
 
-.main-view {
-    margin: 0;
-    color: white;
-}
-
 img {
     display: block;
     width: 340px;
     height: auto;
 }
 
-.movie-view-container {
+.movie-view {
+    color: white;
+}
+
+.movie-view-container-1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 0;
+    margin: 50px 0 0 0;
 }
 
 .label {
@@ -58,51 +45,23 @@ img {
 .movie-img-btn {
     width: 340px;
     margin-top: 10px;
-
 }
 
-.item-1 {
+.movie-item-1 {
     margin: 0 30px;
 }
 
-.item-2 {
+.movie-item-2 {
     text-align: left;
     width: 400px;
     height: auto;
     margin: 0 30px;
 }
 
-.item-2 h1 {
+.movie-item-2 h1 {
     font-size: 18pt !important;
 }
 
-.item-2 h2 {
+.movie-item-2 h2 {
     font-size: 14;
-}
-
-.movie-view-container-2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.movie-view-container-2 h1 {
-    text-align: center !important;
-}
-
-.item-3 {
-    align-self: flex-end;
-    text-align: left;
-    width: 600px;
-    margin: 0 10px;
-}
-
-#bottom-btn {
-    display: none;
-}
-
-@media only screen and (max-width: 883px) {
-    #bottom-btn {
-        display: block;
-    }
 }
