--- a/src/Components/login-view/login-view.scss
+++ b/src/Components/login-view/login-view.scss
@@ -7,21 +7,11 @@ $form-control-border: rgb(68, 68, 68);
 $form-control-focus-border: white;
 $footer-text: rgb(136, 136, 136);
 
-// html {
-//     background-image: url('../../images/movie_wallpaper.jpg');
-//     top: 0;
-//     margin-top: -10px;
-//     margin-bottom: 0;
-//     padding: 0;
-//     width: 100%;
-//     height: 100%;
-// }
-
 .login-view {
     position: absolute;
     background-color: $background-shader;
+    padding: 0 !important;
     margin: 0;
-    padding: 0;
     width: 100%;
     height: 960px;
 }
@@ -76,17 +66,25 @@ $footer-text: rgb(136, 136, 136);
     margin: 10px 0px;
 }
 
-footer {
+.footer-container {
     color: $footer-text;
     background: $card-shader; 
     position: fixed;
     bottom: 0;
+    padding: 0;
+    margin: 0;
     width: 100%;
-    height: 100px;
+    height: 80px;
     
+}
+
+.footer-content {
+    display: block;
+    margin: 10px 0 10px 0;
 }
 
 footer p {
     text-align: center;
     padding-top: 5px;
+    margin: 0;
 }
