--- a/src/Components/profile-view/profile-view.scss
+++ b/src/Components/profile-view/profile-view.scss
@@ -1,6 +1,5 @@
-$card-shader: rgba(0, 0, 0, 0.753);
-$form-text: white;
-$background-color: linear-gradient(180deg, black, rgb(61, 61, 61));
+$card-shader: rgb(0, 0, 0);
+$form-text: rgb(255, 255, 255);
 
 .profile-view {
     position: absolute;
@@ -12,10 +11,11 @@ $background-color: linear-gradient(180deg, black, rgb(61, 61, 61));
 .form-container-profile {
     background: $card-shader;
     color: $form-text;
-    padding: 30px 60px 50px 60px;
+    box-shadow: 0px 0px 18px 1px rgb(255, 255, 255);
+    padding: 30px 60px 60px 60px;
     width: 400px;
     min-height: 625px;
-    max-height: 750px;
+    max-height: 770px;
     font-size: 1.2em;
     margin: 30px 0 0 0;
     text-align: left;
@@ -26,4 +26,18 @@ $background-color: linear-gradient(180deg, black, rgb(61, 61, 61));
     width: 100%;
     margin-top: 15px;
     margin-right: 15px;
+}
+
+.user-info-text {
+    text-align: left;
+}
+
+.user-info-item {
+    color: rgb(184, 184, 184);
+    line-height: 2;
+}
+
+span {
+    font-weight: bold;
+    color: white;
 }
