transferring work to continue to create fav movies feature

--- a/src/Components/movie-view/movie-view.scss
+++ b/src/Components/movie-view/movie-view.scss
@@ -42,7 +42,16 @@ img {
     font-style: italic;
 }
 
-.movie-img-btn {
+.back-btn {
+    width: 200px;
+    margin-top: 10px;
+}
+
+.back-btn-container {
+    text-align: center;
+}
+
+.favorites-img-btn {
     width: 340px;
     margin-top: 10px;
 }
