--- a/src/Components/profile-view/profile-view.scss
+++ b/src/Components/profile-view/profile-view.scss
@@ -28,6 +28,21 @@ $form-text: rgb(255, 255, 255);
     margin-right: 15px;
 }
 
+.favorite-movies-list {
+    text-align: left;
+    width: 405px;
+}
+
+.favorite-movies-list ul li {
+    list-style-type: none;
+    margin-top: 1em;
+
+}
+
+.favorite-movies-list ul {
+    padding-left: 0;
+}
+
 .user-info-text {
     text-align: left;
 }
