added redux for movie state. Added input filter for movies

--- a/src/Components/login-view/login-view.scss
+++ b/src/Components/login-view/login-view.scss
@@ -46,6 +46,9 @@ $footer-text: rgb(136, 136, 136);
     background: $form-control-bg !important;
     border-color: $form-control-border !important;
     color: $form-text !important;
+}
+
+.login-registration-input {
     width: 110% !important;
 }
 
