--- a/src/Components/main-view/main-view.scss
+++ b/src/Components/main-view/main-view.scss
@@ -45,7 +45,7 @@ nav ul {
     color: white;
 }
 
-.links {
+.nav-links {
     display: inline-flex;
     flex-direction: row;
     margin: 0;
@@ -54,4 +54,6 @@ nav ul {
 ul li {
     margin: 0 10px;
 }
+
+
 
