added userInfo state to redux. Altered logout function. Reformatted how profile view obtains userInfo

--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -42,6 +42,14 @@ img {
     font-style: italic;
 }
 
+.genre-btn-margin {
+    margin-right: 10px;
+}
+
+.director-btn-margin {
+    margin-right: 10px;
+}
+
 .back-btn {
     width: 200px;
     margin-top: 10px;
