--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,7 @@ $background-color: linear-gradient(180deg, black, rgb(61, 61, 61));
 div {
     margin: 12px 0px 12px 0px;
 }
+
+.btn:focus {
+    box-shadow: none !important;
+}
